--- a/src/main/resources/assets/elementalcraft/lang/en_us.json
+++ b/src/main/resources/assets/elementalcraft/lang/en_us.json
@@ -385,10 +385,10 @@
 
   "elementalcraft.category.basics": "Basics",
   "elementalcraft.category.basics.desc": "Basics and early-game mechanics.",
+  "elementalcraft.category.source": "Sources",
+  "elementalcraft.category.source.desc": "$(ec:source)Sources$() are naturally occurring spots where $(thing)elements$() converge.",
   "elementalcraft.category.instruments": "Instruments",
   "elementalcraft.category.instruments.desc": "$(thing)Instruments$() are the main crafting tools in $(thing)ElementalCraft$().$(br)They consume $(thing)elements$() and are required to be on top of a $(ec:container)Container$().",
-  "elementalcraft.category.crafting": "crafting",
-  "elementalcraft.category.crafting.desc": "Here is everything you need to know about $(thing)Crafting$().",
   "elementalcraft.category.shrines": "Shrines",
   "elementalcraft.category.shrines.desc": "$(thing)Shrines$() are powerful tools that channel $(thing)elements$() in the world around them to act on it.",
   "elementalcraft.category.advanced": "Advanced",
@@ -401,23 +401,30 @@
   "elementalcraft.entry.shards": "Shards",
   "elementalcraft.entry.rune": "Runes",
   "elementalcraft.entry.reservoir": "Reservoirs",
+  "elementalcraft.entry.source_traits": "Reservoirs",
+  "elementalcraft.entry.springaline": "Springaline",
 
-  "elementalcraft.page.source0": "$(thing)Sources$() are naturally occurring spots where $(thing)elements$() converge.$(br2)It's strongly recommended to explore a bit and find at least one $(thing)sources$() for each $(thing)element$().$(br)It is also recommended to mark their spots to find them easier again when you need them.",
-  "elementalcraft.page.source1": "An $(thing)Air Source$() found naturally.",
   "elementalcraft.page.inert_crystal0": "To get $(item)Inert Crystal$() start digging underground and mine $(item)Inert Crystal Ore$().",
   "elementalcraft.page.contained_crystal0": "$(item)Contained Crystals$() are the main components of $(thing)instruments$().$(br)By coating an $(item)Inert Crystal$() with $(thing)gold$() you are able to prevent it from being altered by $(thing)elements$() without losing its ability to interact with them.",
   "elementalcraft.page.elementpipe0": "$(item)Pipes$() are used to transport $(thing)elements$() across distances.  Their main use is to provide $(thing)instruments$() with the required $(thing)element$().$(br2)You can configure a $(item)pipe$() by right-clicking a section or the core to change it from $(thing)connected$(), $(thing)disconnected$(), $(thing)insert$() or $(thing)extract$().$(br2)$(item)Pipes$() exist in three tiers: impaired, normal and improved.",
   "elementalcraft.page.whiterock0": "$(item)Whiterock$() is $(thing)earth infused$() $(item)stone$().$(br)It is used in the crafting of advanced $(thing)instruments$() and $(thing)shrines$().$(br)To get it simply put $(item)stone$(). In an $(ec:infuser).",
   "elementalcraft.page.cover_frame0": "The $(item)pipe cover frame$() allows you to hide a $(ec:pipe)pipe$() behind a block. Use it on a pipe (preferably while sleeking) then right click it with the block you want to hide it behind.$(br)you can hide frames and show pipes by holding a pipe, a frame or having an empty hand.",
   "elementalcraft.page.element_holder0": "$(item)Element Holders$() can hold $(thing)elements$(), for transport or for use by $(thing)spells$().$(br)To fill them hold right-click on a $(ec:source)source$() of the same $(thing)element$() type. You can also transfer $(thing)element$() back to a receiver by holding right-click on it.",
-  "elementalcraft.page.focus0": "A $(item)focus$() can hold multiple $(thing)spells$().$(br)You can add $(thing)spells$() to it by putting the $(item)focus$() in an $(item)anvil$() with the $(item)scroll$() of the $(thing)spell$(). You can circle through $(thing)spells$() by holding shift and scrolling.",
-  "elementalcraft.page.spell_desk0": "To craft $(thing)spells$() you need a $(item)spell desk$().$(br)To use it right-click to open the crafting interface.$(br)You then have to place a $(item)scroll paper$(), an $(item)element crystal$() of the $(thing)element$() of the spell you want and a $(item)gem$() of the quality you need or better.$(br)Please refers to JEI for recipes details.",
   "elementalcraft.page.shards0": "$(thing)Raw element shards$() are $(thing)elements$() that crystalized in contact with $(thing)creatures$().$(br)They can be transformed into usable $(thing)element$() with an $(l:instruments/evaporator)evaporator$().",
+  "elementalcraft.page.springaline0": "$(thing)Springaline$() is a very old material, legends say $(ec:source)sources$() spring from it.$(br)It can be recreated in a $(ec:binder)binder$() using ametysts, nether quartzs and water crystals. Once you get your first shard its easier to create springaline clusters in your $(ec:binder)binder$() and mine them with a fortune pickaxe.",
+  "elementalcraft.page.elementpipe_priority0": "$(item)Pipe priority rings$() are used to set the prority of a specific $(ec:pipe)pipe$() section.",
+
+  "elementalcraft.page.source0": "$(thing)Sources$() are naturally occurring spots where $(thing)elements$() converge.$(br2)It's strongly recommended to explore a bit and find at least one $(thing)sources$() for each $(thing)element$().$(br2)Be careful though as if you extract too much element from a source it will enter a recovery state. In this state you can no longer extract from the source until it fully recover its capacity.$(br)It is also recommended to mark their spots to find them easier again when you need them.",
+  "elementalcraft.page.source1": "An $(thing)Air Source$() found naturally.",
+  "elementalcraft.page.source_traits0": "$(thing)Source traits$() are an ensemble of traits that define how $(ec:source)sources$() behave. This affect things like the amount they can hold or the speed it takes for them to recover. You can see source traits by using a $(l:sources/source_analysis_glass)source analysis glass$().",
+  "elementalcraft.page.source_analysis_glass0": "The $(item)Source Analysis Glass$() can be used to analyse $(ec:source)sources$(). It will show you what $(l:sources/traits)traits$() the source has.$(br)Every analysis will consume a $(l:basics/springaline)Springaline shard$() from your inventory, so you need to have at least one in your inventory. You can either analyse a source by right-clicking it with the glass or from a receptacle by placing it in the upper right slot of the analysis GUI.",
+  "elementalcraft.page.source_stabilizer0": "The $(item)source stabilizer$() is an item that can be used on $(ec:source)sources$(). It prevents them from being replaced by blocks. It also slightly increase the source recovery rate.",
+  "elementalcraft.page.receptacle0": "$(item)Receptacles$() are powerful tools that allow you to move $(ec:source)source$(). You can pick up and place back $(ec:source)source$() into the world using right-click.$(br)You can repair $(item)Improved Receptacles$() them using $(item)fireite$().",
 
   "elementalcraft.page.container0": "The $(item)Element Container$() is a an $(thing)element$() storage, containing more $(thing)elements$() than the $(ec:small_container)Small Container$(), and it is compatible with all $(thing)instruments$().",
   "elementalcraft.page.extractor0": "Use an $(item)Extractor$() to extract $(thing)elements$() from $(ec:source)sources$().$(br2)To do so place the $(item)Extractor$() above a $(ec:container)Container$() and below the $(ec:source)source$() you want to extract.",
   "elementalcraft.page.evaporator0": "The $(item)evaporator$() allows you to transform $(l:basics/shards)shards$() into $(thing)elements$(). It produces $(thing)elements$() extremely slowly.$(br2)To do so place the $(item)evaporator$() above a $(ec:container)Container$().",
-  "elementalcraft.page.infuser0": "Now that you can extract $(thing)elements$(), it's time to infuse them.$(br2)To do so you need an $(item)Infuser$() on top of a $(ec:container)Container$().$(br)Don't forget to connect it to the $(ec:extractor)Extractor$()'s $(ec:container)Container$() with a $(ec:pipe)pipe$().",
+  "elementalcraft.page.infuser0": "Now that you can extract $(thing)elements$(), it's time to infuse them.$(br2)To do so you need an $(item)Infuser$() on top of a $(ec:container)Container$().$(br)Don't forget to connect it to the $(ec:extractor)Extractor$()'s $(ec:container)Container$() with a $(ec:pipe)pipe$().$(br2)By placing $(item)tools$() in an $(item)element infuser$() you can add effects to them. It's a good way to get early enchantments on tools. You can change the infusion on a tool at any time by infusing it with another element.",
   "elementalcraft.page.small_container0": "The $(item)Small Element Container$() is a simple $(thing)element$() storage for providing $(thing)elements$() to $(thing)instruments$().$(br2)All $(thing)instruments$() need to be placed on top of a $(item)Container$() to operate.$(br)The $(item)Small Element Container$() can only work with $(ec:extractor)Extractors$() and $(ec:infuser)Infusers$().$(br)You can also transfer $(thing)elements$() from one $(item)Container$() to another using $(ec:pipe)pipes$().",
   "elementalcraft.page.binder0": "The $(item)Binder$() is one of the most important $(thing)Instrument$(). It channels $(thing)elements$() to combine multiples items together.$(br)Be careful because the order in which you put the items is important, you need to put them clockwise from the top.$(br)As for any other $(thing)Instruments$(), the $(item)Binder$() needs to be on top of a $(ec:container)Container$(). but not a $(ec:small_container)Small Container$().",
   "elementalcraft.page.solar_synthesizer0": "The $(item)solar element synthesizer$() allows you to harnest $(things)elements$() from the sun light, it needs to see the sky and only woks during the day. You also need to provide lense to make it work.$(br2)To do so place the $(item)solar element synthesizer$() above a $(ec:container)Container$().",
@@ -431,11 +438,6 @@
   "elementalcraft.page.binder_improved0": "The $(item)Improved Element Binder$() works like a $(ec:binder)Binder$() and $(ec:infuser)Infuser$() meaning it can do either binding or infusion at a faster rate.$(br)As for any other $(thing)Instruments$(), the $(item)improved binder$() needs to be on top of a $(ec:container)Container$() but not a $(ec:small_container)Small Container$()",
   "elementalcraft.page.reservoir0": "The $(item)Element Reservoirs$() is a an advanced $(thing)element$() storage, containing more $(thing)elements$() than the $(ec:container)Container$(), it is compatible with all $(thing)instruments$(). But there is four different version each one fore each elements.",
 
-
-  "elementalcraft.page.infusion0": "To infuse an item simply right-click the $(ec:infuser)Infuser$() while holding the item you want to infuse.$(br)Try it now with an $(item)Inert Crystal$().",
-  "elementalcraft.page.infusion1": "An $(thing)Infusion$() can also be applied to $(item)tools$(), improving existing $(thing)enchantments$() or giving them new unique abilities.",
-  "elementalcraft.page.binding0": "$(thing)Binding$() is done by right-clicking a $(ec:binder)Binder$() with all the $(item)ingredients$() in the correct order.",
-
   "elementalcraft.page.shrinebase0": "This is the building block of all $(thing)shrines$().",
   "elementalcraft.page.firepylon0": "The $(item)Fire Pylon$() is a $(thing)Shrine$() that sets fire to nearby $(thing)creatures$().$(br2)It consumes $(thing)fire element$().",
   "elementalcraft.page.oreshrine0": "The $(item)Ore Shrine$() excavates $(thing)ores$() underneath it.$(br2)It consumes $(thing)earth element$().",
@@ -447,17 +449,23 @@
   "elementalcraft.page.overloadshrine0": "The $(item)Overload Shrine$() boost the speed of the $(item)block$() it's facing.$(br2)It consumes $(thing)air element$().",
   "elementalcraft.page.enderlockshrine0": "The $(item)Ender Lock Shrine$() channels $(thing)water$() through the ender matrix preventing anything passing through it.$(br)Near it $(thing)endermen$() can't teleport, $(item)ender pearls$() or $(l:spells/ender_strike)Ender strinke$() don't work.$(br2)It consumes $(thing)water element$().",
   "elementalcraft.page.breedingshrine0": "The $(item)Breeding Shrine$() uses $(thing)food$() laying around to breed $(thing)animals$() in range.$(br2)It consumes $(thing)earth element$().",
-  "elementalcraft.page.groveshrine0": "The $(item)Wild Grove Shrine$() wil create wild $(thing)flowers$() on top of $(item)grass$().$(br2)It consumes $(thing)water element$().",
+  "elementalcraft.page.groveshrine0": "The $(item)Wild Grove Shrine$() will create wild $(thing)flowers$() on top of $(item)grass$().$(br2)It consumes $(thing)water element$().",
+  "elementalcraft.page.springshrine0": "The $(item)Spring Shrine$() will create a water block on top of it.$(br2)It consumes $(thing)water element$().",
+  "elementalcraft.page.buddingshrine0": "The $(item)Budding Shrine$() grows $(item)amethyst clusters$() on top of it.$(br2)It consumes $(thing)earth element$().",
+  "elementalcraft.page.spawningshrine0": "The $(item)Spawning Shrine$() summon mobs around it.$(br2)It consumes $(thing)fire element$().",
   "elementalcraft.page.shrine_upgrade0": "You can craft $(thing)shrine upgrades$() to increase the power of your $(thing)shrines$(). Those upgrades can only be placed at specific places around the $(thing)shrine$().$(br)Upgrades cover a wide range of bonuses from $(thing)speed$(), $(thing)reduce consumption$(), $(thing)range$()... or specific ones like $(thing)silk touch$() or $(thing)fortune$() for the $((l:shrines/oreshrine)ore shrine$().",
 
-  "elementalcraft.page.receptacle0": "$(item)Receptacles$() are powerful tools that allow you to move $(ec:source)source$(). You can pick up and place back $(ec:source)source$() into the world using right-click.$(br)You can repair $(item)Improved Receptacles$() them using $(item)fireite$().",
   "elementalcraft.page.pureinfuser0": "The $(item)Pure Infuser$() is the most powerful crafting tool. It uses $(item)pedestals$() to channel all four $(thing)elements$() into a single item.$(br)To operate, it needs to be circled with each of the four $(item)pedestals$(), each being provided with the correct $(thing)element$() using $(ec:pipe)improved pipes$().$(br)Once this setup is done, you can start crafting by putting the correct $(item)ingredient$() on each $(thing)pedestal$() and the main one on the $(thing)pure infuser$().",
   "elementalcraft.page.purerock0": "$(item)Pure Rock$() is an extremely strong stone that is able to resist some of the most powerful blasts, even a $(thing)Wither$().",
   "elementalcraft.page.instrument_retriever0": "The $(item)Instrument Output Retriever$() is a finely-tweaked machine that can interact with $(thing)instruments$() and handle their output for themself, allowing you to extract their output upon crafting and store it in a $(item)chest$(), for example.$(br2)You can reorient its input and output by right-clicking them.",
   "elementalcraft.page.sorter0": "The $(item)Ordered Sorter$() use the advanced properties of swift alloy to insert specific items in a specific order into any $(thing)instrument$() or $(thing)chest$().$(br)You can add a new item to the order list by right-clicking the middle part.$(br)You can reorient its input and output by right-clicking them.",
-  "elementalcraft.page.spell_book0": "The $(item)Elementalist Grimoire$() allows you to store $(thing)spells$().You can right-click it to open its inventory.",
   "elementalcraft.page.rune0": "$(thing)Runes$() are infused with element power that can be transferred to $(thing)instruments$() to boost their properties.$(br)They are created using an $(l:instruments/inscriber)inscriber$()",
-  
+  "elementalcraft.page.pure_element_holder0": "$(item)Pure element holders$() is an improved version of the $(l:basics/element_holder)element holders$().It can store all four $(thing)elements$() at once and in a way bigger quantity.",
+
+  "elementalcraft.page.spell_desk0": "To craft $(thing)spells$() you need a $(item)spell desk$().$(br)To use it right-click to open the crafting interface.$(br)You then have to place a $(item)scroll paper$(), an $(item)element crystal$() of the $(thing)element$() of the spell you want and a $(item)gem$() of the quality you need or better.$(br)Please refers to JEI for recipes details.",
+  "elementalcraft.page.focus0": "A $(item)focus$() can hold multiple $(thing)spells$().$(br)You can add $(thing)spells$() to it by putting the $(item)focus$() in an $(item)anvil$() with the $(item)scroll$() of the $(thing)spell$(). You can circle through $(thing)spells$() by holding shift and scrolling.",
+  "elementalcraft.page.staff0": "You can get a $(item)staff() from a $(item)diamond/netherite sword$() and a  $(l:spells/focus)focus$(), it will preserve the enchantment of the sword and the spells of the focus.",
+  "elementalcraft.page.spell_book0": "The $(item)Elementalist Grimoire$() allows you to store $(thing)spells$().You can right-click it to open its inventory.",
   "elementalcraft.page.fireball0": "Throw a $(thing)fire ball$() in the direction you are looking.$(br)Consumes $(thing)fire$() from an $(ec:holder)element holder$().",
   "elementalcraft.page.gravelfall0": "Summon a column of $(item)gravel$() above the targeted $(thing)block$() or $(thing)entity$().$(br)Consumes $(thing)earth$() from an $(ec:holder)element holder$() and three $(item)gravel$().",
   "elementalcraft.page.stonewall0": "Summon a three by three $(thing)stone wall$() in front of you to protect you from attacks.$(br)Consumes $(thing)earth$() from an $(ec:holder)element holder$() and nine $(item)stone$().",
@@ -472,5 +480,9 @@
   "elementalcraft.page.inferno0": "Breathe fire in front of you dealing damage to all the $(thing)entities$() in a cone.$(br)Consumes $(thing)fire$() from an $(ec:holder)element holder$().",
   "elementalcraft.page.dash0": "Dash in targeted direction.$(br)Consumes $(thing)air$() from an $(ec:holder)element holder$().",
   "elementalcraft.page.silk_vein0": "Mine a whole $(thing)ore vein$() with silk touch.$(br)Consumes $(thing)earth$() from an $(ec:holder)element holder$().",
-  "elementalcraft.page.speed0": "Increase speed and attack speed for you or the targeted $(thing)entity$().$(br)Consumes $(thing)air$() from an $(ec:holder)element holder$()."
+  "elementalcraft.page.speed0": "Increase speed and attack speed for you or the targeted $(thing)entity$().$(br)Consumes $(thing)air$() from an $(ec:holder)element holder$().",
+  "elementalcraft.page.translocation0": "Teleport you 100 block in the targeted direction.$(br)Consumes $(thing)air$() from an $(ec:holder)element holder$().",
+  "elementalcraft.page.feather_spikes0": "Throw three feather projectiles in front of you in a quick succession.$(br)Consumes $(thing)air$() from an $(ec:holder)element holder$().",
+  "elementalcraft.page.air_shield0": "Channel air in front of you to block projectiles and hits (like a shield does). Stay active as long as you keep right-click down.$(br)Consumes $(thing)air$() from an $(ec:holder)element holder$().",
+  "elementalcraft.page.shockwave0": "Knock back and damage mobs around you.$(br)Consumes $(thing)air$() from an $(ec:holder)element holder$()."
 }
