--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,12 @@
+1.19.1-5.2.0:
+
+- bump to 1.19.1
+- add a lot of new elementopedia entries
+- add sources to underground biomes
+- air mill can now grind blaze rods
+- fix source exhaustion threshold
+
+
 1.19-5.1.0:
 
 - new block: source breeder
