--- a/changelog.txt
+++ b/changelog.txt
@@ -1,6 +1,11 @@
+1.18.2-4.4.19:
+
+- fix improve binder deleting tool with tool infusion (issue #100)
+
+
 1.18.2-4.4.18:
 
-- fix a crash with reservoirs
+- fix a crash with reservoirs (issue #99)
 
 
 1.18.2-4.4.17:
