--- a/src/main/resources/assets/elementalcraft/lang/en_us.json
+++ b/src/main/resources/assets/elementalcraft/lang/en_us.json
@@ -347,6 +347,8 @@
   "tooltip.elementalcraft.strider": "Allows you to walk on lava",
   "tooltip.elementalcraft.water_strider": "Allows you to walk on water",
   "tooltip.elementalcraft.basilisk": "Slow down the enemy you are looking at",
+  "tooltip.elementalcraft.strider.minecraft.lava": "Allows you to walt on lava",
+  "tooltip.elementalcraft.strider.minecraft.water": "Allows you to walk on water",
 
   "death.attack.elementalcraft.jewel.kirin": "%1$s was smited by %2$s",
   "death.attack.elementalcraft.jewel.kirin.item": "%1$s was smited by %2$s using %3$s",
