--- a/src/main/resources/assets/elementalcraft/lang/en_us.json
+++ b/src/main/resources/assets/elementalcraft/lang/en_us.json
@@ -135,6 +135,7 @@
   "block.elementalcraft.elementpipe_impaired": "Impaired Element Pipe",
   "block.elementalcraft.elementpipe": "Element Pipe",
   "block.elementalcraft.elementpipe_improved": "Improved Element Pipe",
+  "block.elementalcraft.elementpipe_creative": "Creative Element Pipe",
   "block.elementalcraft.instrument_retriever": "Instrument Output Retriever",
   "block.elementalcraft.sorter": "Ordered Sorter",
   "block.elementalcraft.spell_desk": "Spell Desk",
