--- a/src/main/resources/assets/elementalcraft/lang/en_us.json
+++ b/src/main/resources/assets/elementalcraft/lang/en_us.json
@@ -141,6 +141,7 @@
   "block.elementalcraft.spell_desk": "Spell Desk",
   "block.elementalcraft.source_breeder": "Element Source Breeder",
   "block.elementalcraft.source_breeder_pedestal": "Element Source Breeder Pedestal",
+  "block.elementalcraft.translocation_anchor": "Translocation Anchor",
 
   "block.elementalcraft.firepylon": "Fire Pylon",
   "block.elementalcraft.vacuumshrine": "Vacuum Shrine",
